welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: unclosed string literal
    return "10h00""
                  ^alarmClock:11: error: ';' expected but something found.
    return "10h00""
                  ^